--- a/WebApplication2/WebApplication2.fsproj
+++ b/WebApplication2/WebApplication2.fsproj
@@ -13,12 +13,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Dockerfile" />
+    <Folder Include="DataAccess\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Properties\launchSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
